fixed stretching in safari

--- a/public/styles/editpost.css
+++ b/public/styles/editpost.css
@@ -15,7 +15,7 @@ body {
  
  }
  .navbar {
-     margin-bottom: 20px;
+    
      background-color: #3D9970 !important;
  
  }
