--- a/public/styles/main.css
+++ b/public/styles/main.css
@@ -6,6 +6,7 @@ body {
     
     font-family: 'Lato', sans-serif;
     font-family: 'Satisfy', cursive;
+    padding-bottom: 30px;
     
 }
 .container {
@@ -25,8 +26,9 @@ body {
 
 }
 .navbar {
-    margin-bottom: 20px;
+   
     background-color: #3D9970;
+  
    
 
 }
@@ -63,7 +65,7 @@ li.list-group-item {
 .card {
     border-width: 2px !important;
     border-color:#111111 !important;
- 
+    margin-top: 30px;
     background-color: #DDDDDD !important;
 }
 
@@ -75,6 +77,7 @@ li.list-group-item {
     height: 40px;
     margin-top: 5px;
     margin-left: 5px !important;
+    margin-bottom:  10px;
     
 }
 
@@ -83,19 +86,52 @@ li.list-group-item {
     display: flex;
     flex-direction: row;
     justify-content: space-between;
-   
+  
     background-color: #DDDDDD;
 }
 
-.box img {
-    width: 50px;
-    display: flex;
-}
 
 .navbar-text {
     font-family: 'Satisfy', cursive !important;
     text-decoration: none !important;
-    font-size: 20px;
+    font-size: 17px;
+    
     
 }
+
+h1 {
+    
+    justify-content: center;
+    font-family: 'Satisfy', cursive !important;
+    font-size: 70px !important;
+}
+
+img {
+    width: 100px;
+    
+}
+
+.top-container {
+    display: flex;
+    margin: auto;
+    flex-direction: row;
+    justify-content: center;
+}
+
+hr {
+    border: 3px solid !important;
+    color: black !important;
+    
+    
+    
+}
+
+.headerimage {
+    display: flex;
+    margin: auto;
+    flex-direction: row;
+    justify-content: center;
+    align-self: baseline;
+}
+
 
